Remove integrity check and add debug

--- a/index.html
+++ b/index.html
@@ -171,9 +171,7 @@
     </div>
 
     <!-- Kakao SDK -->
-    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"
-        integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kBWIfgxBe1lv62fDyB+aXFi39/zs82/Srl"
-        crossorigin="anonymous"></script>
+    <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js"></script>
     <script src="script.js"></script>
 </body>
 
