Update final text and metadata

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>The Wedding of Chanyoung & Jisoo</title>
+    <title>김영빈 ♥ 김도연</title>
 
     <!-- SEO & Open Graph -->
-    <meta name="description" content="2024년 10월 25일 더 화이트 베일, 저희 두 사람의 결혼식에 초대합니다.">
+    <meta name="description" content="2026년 9월 6일 일요일 오후 2시 더 화이트 베일, 저희 두 사람의 결혼식에 초대합니다.">
     <meta property="og:title" content="김영빈 & 김도연의 결혼식에 초대합니다">
-    <meta property="og:description" content="2024. 10. 25 Fri 12:00 PM | 더 화이트 베일">
+    <meta property="og:description" content="2026년 9월 6일 일요일 오후 2시 | 더 화이트 베일">
     <meta property="og:image" content="assets/images/main.jpg">
     <meta property="og:url" content="https://example.com">
 
@@ -38,16 +38,17 @@
                 <img src="assets/images/b98f216b2e027.jpg" alt="Main Photo" class="main-photo">
             </div>
             <div class="intro-text fade-in-up">
-                <p class="eng-title">The Wedding of</p>
-                <h1 class="names">
-                    <span>김영빈</span>
-                    <span class="amp">♥</span>
-                    <span>김도연</span>
-                </h1>
-                <div class="divider"></div>
-                <p class="date">2026년 9월 6일 일요일 오후 2시</p>
-                <p class="venue">The White Veil</p>
-            </div>
+                <div class="intro-text fade-in-up">
+                    <p class="eng-title">The Wedding of</p>
+                    <h1 class="names">
+                        <span>김영빈</span>
+                        <span class="amp">♥</span>
+                        <span>김도연</span>
+                    </h1>
+                    <div class="divider"></div>
+                    <p class="date">2026년 9월 6일 일요일 오후 2시</p>
+                    <p class="venue">The White Veil</p>
+                </div>
         </section>
 
         <!-- Invitation Text -->
