--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                     </div>
                     <div class="gallery-item fade-in-up"><img src="assets/images/b858bd3062316.jpg" alt="Gallery 7">
                     </div>
+                    <div class="gallery-item fade-in-up"><img src="assets/images/KakaoTalk_20260129_213335513.jpg"
+                            alt="Gallery 8">
+                    </div>
                 </div>
             </div>
         </section>
